# tbank-sirius-cv

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  start.sh
configs/: yolo_config.yaml  yolo_dataset.yaml
docs/: CASE.md  EXPERIMENTS.md  ML.md  cv_case.md
src/annotation/: __init__.py  annotate.py  detect.py
src/data/: split.py
src/scripts/: annotate.py  detect.py  detect_logos.py
src/tbank_logo_detector/: __main__.py  service.py  util.py  utils.py
src/tbank_logo_detector/annotation/: annotate.py  detect.py
src/tbank_logo_detector/data/: __main__.py  annotate.py  detect.py  split.py
src/tbank_logo_detector/model/: __init__.py  __main__.py  train.py  yolo.py
tests/: test_annotate_box.py  test_clip.py  test_groundingdino.py  test_image_annotation.py  test_service.py
