[project]
name = "sirius-ml"
version = "0.1.0"
description = "Machine learning project for Sirius case study"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "groundingdino-py>=0.4.0",
    "open-clip-torch>=2.32.0",
    "scikit-learn>=1.3.2",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "ultralytics>=8.3.199",
]

[tool.pyright]
typeCheckingMode = "off"

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
sirius-ml = { workspace = true, editable = true }

[dependency-groups]
dev = [
    "rich>=14.1.0",
    "sirius-ml",
    "tensorboard>=2.14.0",
]
