[project]
name = "sirius-ml"
version = "0.1.0"
description = "Machine learning project for Sirius case study"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "fastapi>=0.116.1",
    "groundingdino-py>=0.4.0",
    "open-clip-torch>=2.32.0",
    "python-multipart>=0.0.20",
    "scikit-learn>=1.3.2",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "ultralytics>=8.3.199",
    "uvicorn>=0.33.0",
]

[tool.pyright]
typeCheckingMode = "off"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.3.5",
    "rich>=14.1.0",
    "tensorboard>=2.14.0",
]
