[project]
name = "sirius-ml"
version = "0.1.0"
description = "Machine learning project for Sirius case study"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "fastapi>=0.116.1",
    "opencv-python-headless>=4.12.0.88",
    "python-multipart>=0.0.20",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "ultralytics>=8.3.199",
    "uvicorn>=0.33.0",
]

[tool.pyright]
typeCheckingMode = "off"

[tool.uv]
package = true
required-environments = ["sys_platform == 'linux'"]

[dependency-groups]
dev = [
    "groundingdino-py>=0.4.0",
    "httpx>=0.28.1",
    "open-clip-torch>=2.32.0",
    "pytest>=8.3.5",
    "rich>=14.1.0",
    "scikit-learn>=1.3.2",
]
